refactor: update application review method to return string response and enhance prompt structure